@@ -1,0 +1,13 @@
+<h1>Vanner最新專輯《Burn》唱出年輕人的艱難：疫情、入伍、巡演，五位成員的真情告白</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SnGIT-I0bb0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>韓國男子組合Vanner最近發行了他們的第三張迷你專輯《Burn》，這張專輯講述了年輕人在追求夢想的道路上所面臨的艱難。對於2019年出道的Vanner組合來說，這種艱難是非常熟悉的，因為他們在出道不久後就遇到了COVID-19疫情的爆發。</p>
+<p>Vanner的成員Hyesung表示：“我們沒有機會表演，但是在JTBC的偶像生存節目《Peak Time》中獲勝後，我們開始獲得了很多粉絲的喜愛。我們希望這張專輯能夠讓年輕的聽眾感同身受。”</p>
+<p>《Burn》專輯中包含了六首歌曲，以電子朋克和迪斯科風格的《Automatic》為主打歌。Vanner的成員Gon說：“這首歌的表演將會與我們之前的表演非常不同。我們之前的主打歌表演都很有力量和能量，但這次我們專注於展現每個成員的魅力。我們精心設計了我們的表情和舞蹈的每一個細節。”</p>
+<p>Vanner是一個由五名成員組成的團體，包括Taehwan、Gon、Hyesung、Sungkook和Yeonggwang。雖然Sungkook因為入伍而沒有參加這次的宣傳活動，但他參與了專輯中最後一首歌《Be Together》的錄製，並且寫了這首歌的饒舌部分。Gon說：“這首歌的旋律很有希望，但歌詞卻有一點悲傷。這種對比使得它成為了一首迷人的歌曲。”</p>
+<p>Hyesung表示：“Sungkook承諾他會健康和快樂地回來。他也說這只是暫時的告別，並且請求粉絲期待我們未來的輝煌。”</p>
+<p>Vanner最近進行了他們的第一次獨立亞洲巡演“The Flag: A to V”，在台灣、日本和香港等地表演。Yeonggwang說：“這是我們夢寐以求的事情。能夠在粉絲面前表演使得我們更加渴望更多的演唱會。我們希望能夠提高演唱會的質量，並且我們的目標是舉辦一場在首爾世界盃體育場的演唱會。”</p>
+<p>組合暗示他們可能會在年底前再次出國巡演。Taehwan說：“我們在歐洲和北美洲有粉絲，但是我們已經很久沒有見到他們了，所以我們正在努力實現這個目標。”</p>
+
+<p>資料來源： Korea Herald</p>
