@@ -15,3 +15,4 @@ https://www.koreaherald.com/view.php?ud=20240930050525
 https://www.koreaherald.com/view.php?ud=20240930050420
 https://www.koreaherald.com/view.php?ud=20241001050096
 https://www.koreaherald.com/view.php?ud=20241001050062
+https://www.koreaherald.com/view.php?ud=20240929050186
